Update build.sbt
issues with original, praying this version works